styles.css
body, html {
  margin: 0;
  height: 100%;
  font-family: sans-serif;
}

.container {
  overflow: hidden;
  display: flex;
  height: 100%;
}

.sidebar {
  width: 20%;
  padding: 10px;
  background: #f0f0f0;
}

.main {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.grid {
  flex-grow: 1;
  display: grid;
  gap: 4px;
  background: white;
  border: 1px solid #ccc;
  padding: 10px;
  overflow: auto;
}

.slider-wrapper {
  padding: 10px;
  background: #fafafa;
  border-top: 1px solid #ddd;
}

.cell {
  position: relative;
  background-color: #eee;
  border: 1px solid #aaa;
  border-color: #ccc;
  border-radius: 8%;
}

.cell.UNTOUCHED {
  background-color: #e1e1e1; /* same as empty */
  border-color: #ccc;
}


.cell.EMPTY {
  background-color: #eee;
}

.cell.START {
  background-color: #f90;
  border-color: #c60;
  color: white;
}

.cell.STICKY {
  background-image: radial-gradient(circle, orange 30%, transparent 31%);
}

.cell.BLOCK {
  background-color: #555;
  border-color: #333;
}

.cell.ONEWAY {
  background-color: #fc9; /* light orange */
  border-color: #e96;
}

.cell.TELEPORTER {
  background-color: #c9f; /* purple-ish */
  border-color: #96c;
}

/* arrows */
.cell .arrow {
  position: absolute;
  width: 0px;
  height: 0px;
  border-style: solid;
  opacity: .0;
}

.cell .arrow.visited {
  opacity: 1;
}

/* Arrow positions */
.arrow.UP {
  top: 2px;
  left: 50%;
  transform: translateX(-50%);
  border-width: 0 4px 6px 4px;
  border-color: transparent transparent #3de700 transparent;
}

.arrow.RIGHT {
  top: 50%;
  right: 2px;
  transform: translateY(-50%) rotate(90deg);
  border-width: 0 4px 6px 4px;
  border-color: transparent transparent #ff0000 transparent;
}

.arrow.DOWN {
  bottom: 2px;
  left: 50%;
  transform: translateX(-50%) rotate(180deg);
  border-width: 0 4px 6px 4px;
  border-color: transparent transparent #000 transparent;
}

.arrow.LEFT {
  top: 50%;
  left: 2px;
  transform: translateY(-50%) rotate(-90deg);
  border-width: 0 4px 6px 4px;
  border-color: transparent transparent #1f8ee8 transparent;
}

.cell.ONEWAY .arrow {
  border-width: 0 15px 20px 15px;
  border-color: transparent transparent #dd8a37 transparent;
}

